批量删除站点 完成

--- a/static/site_add.html
+++ b/static/site_add.html
@@ -214,7 +214,7 @@
                         '</div></div>'
                 })
             }
-        }, 2000000)
+        }, false)
     }
 
     // 搜索当前的可用插件的安装包
